@@ -3,8 +3,10 @@
  */
 
 plugins {
-    id 'sumatra.java-conventions'
     id 'java-library'
+    id 'sumatra.java'
+    id 'sumatra.test'
+    id 'application'
 }
 
 dependencies {
@@ -15,19 +17,17 @@ dependencies {
     implementation project(':moduli-ai')
     implementation project(':moduli-record')
     implementation project(':moduli-ai-controller')
-    implementation project(':moduli-autoreferee')
-    implementation project(':moduli-vision')
-    implementation project(':moduli-vision-simulation')
-    implementation project(':moduli-offensive-tree')
-    implementation project(':moduli-log-analysis')
 
-    implementation 'com.github.TIGERs-Mannheim:java-object-size-estimator:v1.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
+    implementation 'org.openjdk.jol:jol-core:0.16'
+    implementation 'com.sleepycat:je:18.3.12'
+}
 
-    implementation 'commons-lang:commons-lang:2.6'
-    implementation 'com.google.guava:guava:30.1.1-jre'
-
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.assertj:assertj-core:3.19.0'
+application {
+    mainClass.set('edu.tigers.sumatra.persistence.BerkeleySizeAnalyzer')
+    applicationDefaultJvmArgs = [
+            '-Djdk.attach.allowAttachSelf',
+            '-Djol.magicFieldOffset=true'
+    ]
 }
